# sql-vuln-generator

./: .env.example  .gitignore  EXPERIMENT_SUMMARY.md  README.md  SIMPLIFICATION_SUMMARY.md  automated_generator.py  exact_rules.yaml  fstring_assign_test.yaml  fstring_cursor_test.yaml  fstring_cursor_test2.yaml  main.py  pyproject.toml  quickstart.sh  requirements.txt  scan_generated_code.py  scenarios.py  secure-codegen-study.md  semgrep_scan_report_20251125_234456.json  setup_check.py  simple_fstring_test.yaml  simple_rules.yaml  simple_test.py  test_rules.yaml  test_vuln.py
checks/semgrep/: sql-injection-rules.yaml
checks/sql/: sql_owasp_reference.md  sql_reference.json
docs/: ARCHITECTURE_CHANGES.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.md  MULTI_PROVIDER_GUIDE.md  MULTI_PROVIDER_QUICKREF.md  Makefile  OVERVIEW.md  PROGRESS_SESSION_20251105.md  PROJECT_README.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  START_HERE.txt  quickstart_multi.sh
experiments/: COMPLETION_STATUS.txt  COMPREHENSIVE_DETECTION_ANALYSIS.json  FINAL_EXPERIMENT_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md
experiments/20-readyonly-run_20251029_210527/: CODE_COMPLETION_REPORT.md
generated_code/: README.md
src/: __init__.py  cli.py  code_completion_main.py  code_completion_main_multi.py  code_completion_runner.py  experiment_main.py  experiment_runner.py  generator.py  main.py  prompt_generator.py  run_vulnerable_scenarios_experiment.py  run_vulnerable_scenarios_experiment_claude_gemini.py  semgrep_analyzer.py  simple_experiment_runner.py  visualizations.py
tests/: test_generator.py
(+212 files in other folders)
